--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,8 @@ links:
   - name:         GitHub
     url:          http://github.com/smiley325
     external:     true
-highlighter:      pygments
+
+highlighter:      rouge
 permalink:        pretty
 markdown:         redcarpet
 redcarpet:
