--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ links:
     url:          http://github.com/smiley325
     external:     true
 
-highlighter:      rouge
+highlighter:      pygments
 permalink:        pretty
 markdown:         redcarpet
 redcarpet:
